# flat-py-demo

./: .gitignore  README.md  bundle.py  pyproject.toml
demo/: __main__.py  lib.py
