[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
version = "0.1.0"
authors = [
  { name = "Brian McClune", email = "brian.mcclune@proton.me" },
]
description = "Demo of packaging a flat layout Python project."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["demo", "flat-layout"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
]
